Removed restrictions for CORS.